--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
-POSTGRES_DB=db
+NODE_ENV=development
+
+PORT=3000
+
+COOKIE_DOMAIN=localhost
+
+JWT_SECRET=some-secret
+JWT_ACCESS_TOKEN_TTL='1h'
+JWT_REFRESH_TOKEN_TTL='7d'
+
+POSTGRES_DB=pet-shelter
 POSTGRES_USER=user
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=123
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 PGDATA=/var/lib/postgresql/data
+
+NGROK_AUTH_TOKEN=token
